[CLOUDTRUST-7015] Adapt event-emitter to use JOSE instead of PKCS7